--- a/page_nest/templates/base.html
+++ b/page_nest/templates/base.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css"
     />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     {% block css %} {% endblock %}
   </head>
   <body>
