--- a/page_nest/book_outlet/templates/book_outlet/partials/book_card.html
+++ b/page_nest/book_outlet/templates/book_outlet/partials/book_card.html
@@ -1,7 +1,10 @@
 <li
   class="group rounded-xl border border-gray-800 bg-gray-900/60 p-4 transition-colors hover:border-gray-700 hover:bg-gray-900/90"
 >
-  <div class="flex items-start justify-between gap-4">
+  <a
+    class="flex items-start justify-between gap-4 cursor-pointer"
+    href="{% url 'show_book' book.id %}"
+  >
     <div class="min-w-0">
       <div>
         <h2
@@ -13,20 +16,7 @@
         <p class="text-xs text-muted mb-2">{{ book.description }}</p>
         {% endif %}
       </div>
-      <div class="mt-2 flex items-center gap-2">
-        <div class="flex items-center text-amber-400">
-          <!--prettier-ignore-->
-          {% for i in star_range %}
-                {% if book.rating > i %}
-          <span aria-hidden="true" class="leading-none">⭐</span>
-          <!--prettier-ignore-->
-          {% endif %}
-                {% endfor %}
-        </div>
-        <span class="text-xs font-medium text-gray-300"
-          >({{ book.rating }})</span
-        >
-      </div>
+      {% include 'book_outlet/partials/book_rating.html'%}
     </div>
-  </div>
+  </a>
 </li>
