--- a/page_nest/book_outlet/templates/book_outlet/partials/book_card.html
+++ b/page_nest/book_outlet/templates/book_outlet/partials/book_card.html
@@ -3,7 +3,7 @@
 >
   <a
     class="flex items-start justify-between gap-4 cursor-pointer"
-    href="{% url 'show_book' book.id %}"
+    href="{{ book.get_absolute_url }}"
   >
     <div class="min-w-0">
       <div>
