feat(book_outlet): enhance admin config, models, and book detail template

--- a/page_nest/book_outlet/templates/book_outlet/book_detail.html
+++ b/page_nest/book_outlet/templates/book_outlet/book_detail.html
@@ -15,6 +15,7 @@
     <span class="font-medium text-gray-400">Author:</span>
     {{ book.author }}
   </p>
+  <p class="text-gray-400 mb-2 text-sm">{{ book.author.address }}</p>
   {% endif %}
 
   <!-- Rating -->
